Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/BadCovar.out
BadCovar.java:22:10: compiler.err.types.incompatible: bad.covar.B, bad.covar.A, (compiler.misc.incompatible.diff.ret: f, )
1 error
